--- a/Projeto/style.css
+++ b/Projeto/style.css
@@ -63,9 +63,9 @@ h1 {
     margin-left: 5px;
 }
 
-/* .hide {
+.hide {
     display: none !important;
-} */
+}
 
 #placar-container {
     font-weight: bold;
@@ -106,5 +106,4 @@ h1 {
     background-color: black;
     color: white;
     padding: 20px;
-    display: none;
 }
